# DMSA_LiDAR_SLAM

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: Ouster_LiDAR_NewerCollege_128.yaml  Ouster_LiDAR_NewerCollege_64.yaml  custom.yaml  hilti_2022.yaml  livox.yaml  newer_college_ouster_128.yaml  newer_college_ouster_64.yaml  slam_settings.yaml
helpers/: updateEigenUbuntu20.04.sh
include/: dmsa_slam_ros.h
include/DMSA/: Config.h  ConsecutivePoses.h  ContinuousTrajectory.h  DmsaOptimizer.h  DmsaSlam.h  Gaussians.h  ImuBuffer.h  ImuPreintegration.h  KeyframeData.h  MapManagement.h  OptimizablePointSet.h  OutputManagement.h  PointCloudBuffer.h  PointCloudPlus.h  PointStampId.h  Poses.h  RingBuffer.h  helpers.h
launch/: Ouster_LiDAR_NewerCollege_128.launch  Ouster_LiDAR_NewerCollege_64.launch  custom.launch  hilti_2022.launch  livox.launch  newer_college_ouster_128.launch  newer_college_ouster_64.launch
rviz/: dmsa.rviz
src/: dmsa_slam_ros.cpp  main.cpp
