<?xml version="1.0"?>
<package format="2">
  <name>dmsa_slam_ros</name>
  <version>0.0.0</version>
  <description>The dmsa_slam_ros package</description>

  <maintainer email="davidskuddis@web.de">skuddis</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>openmp</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>openmp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>openmp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  
  <export>
  </export>
</package>
